# DSGen

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/Modules/: FindJsonCPP.cmake
dse_utils/: dse_utils.cpp  dse_utils.h
include/: PolyModel.h  cmdline_parser.h  codegen.h  file_parser.h
include/merlin/: altera_postprocess.h  altera_preprocess.h  analPragmas.h  array_delinearize.h  array_linearize.h  auto_pipeline.h  bitwidth_opt.h  bsuGroup.h  bsuNode.h  bsuNode_v2.h  channel_def.h  channel_partition.h  cmost.h  coarse_parallel.h  coarse_pipeline.h  coarse_pipeline_altera.h  codegen.h  comm_opt.h  common.h  final_code_gen.h  function_inline.h  function_outline.h  header.h  history.h  history_message.h  id_update.h  input_checker.h  interface_transform.h  ir_types.h  kernel_pragma_gen.h  kernel_separate.h  kernel_wrapper.h  line_buffer.h  locations.h  loop_distribute.h  loop_flatten.h  loop_parallel.h  loop_tiling.h  lower_cpp.h  lower_separate.h  (+27 more)
include/merlin/legacy/ir/: PolyModel.h  pltf_annotate.h  tldm_annotate.h
include/merlin/legacy/parsers/: cmdline_parser.h  file_parser.h  xml_parser.h
src/: ds_bitwidth_opt.cpp  ds_gen_main.cpp  ds_generator.cpp  ds_generator.h  ds_parallel.cpp  ds_pipeline.cpp  ds_tiling.cpp  dse_utils.cpp
test/: CMakeLists.txt  unit_test.cpp
test/aes/: aes.cpp  aes.h  ds_info.json
test/black_euro/: black_euro.cpp  ds_info.json  merlin_type_define.h  rose_black_euro.cpp
unit_test/: unit_test.cpp
